Added RaiseDifficulty/LowerDifficulty, made back button on Settings functional.

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -85,21 +85,24 @@
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\SetMenuStateCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuDownCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuLeftCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuPressCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuRightCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuExitCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuUpCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\UnpauseGameCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\PauseGameCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\SetMenuStateCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuDownCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuLeftCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuPressCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuRightCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuExitCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuUpCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\UnpauseGameCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\PauseGameCommand.cs" />
     <Compile Include="Libraries\Command\ICameraCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerIdleCommand.cs" />
     <Compile Include="Libraries\Command\ProjectileDamageEnemyCommand.cs" />
     <Compile Include="Libraries\Command\ProjectileDamagePlayerCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\PlayerAimUpCommand.cs" />
     <Compile Include="Libraries\Command\QuitCommand.cs" />
+    <Compile Include="Libraries\Command\LowerDifficultyCommand.cs" />
+    <Compile Include="Libraries\Command\RaiseDifficultyCommand.cs" />
+    <Compile Include="Libraries\Command\DummyCommand.cs" />
     <Compile Include="Libraries\Command\RestartCommand.cs" />
     <Compile Include="Libraries\Command\ToggleFullscreenCommand.cs" />
     <Compile Include="Libraries\Command\PlayerInputCommands\CycleBeamMissileCommand.cs" />
