--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -91,6 +91,8 @@
     <Compile Include="Libraries\Command\AudioCommands\ShuffleThemesCommand.cs" />
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
+    <Compile Include="Libraries\Command\GameWinMenuCommand.cs" />
+    <Compile Include="Libraries\Command\MainMenuCommand.cs" />
     <Compile Include="Libraries\Command\SettingsMenuCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
     <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\SetMenuStateCommand.cs" />
@@ -160,9 +162,9 @@
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\MenuButtonSprites\SimpleButtonSprite.cs" />
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\IMenuButton.cs" />
     <Compile Include="Libraries\GameStates\States\GameOverState.cs" />
-    <Compile Include="Libraries\GameStates\States\GameWinState.cs" />
     <Compile Include="Libraries\GameStates\States\ItemUpgradeSelectionState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\AbstractMenuState.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\GameWinMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\StartMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\SettingsMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\InGameMenuState.cs" />
