--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Libraries\Container\InfoContainer\ProjectileUtilities.cs" />
     <Compile Include="Libraries\Container\InfoContainer\MiscUtilities.cs" />
     <Compile Include="Libraries\Container\InfoContainer\InfoContainer.cs" />
+    <Compile Include="Libraries\Controller\CameraController.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
     <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon1.cs" />
     <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon2.cs" />
