--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{3363B47E-7523-41E5-B4C3-51E4A16DF98D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CrossPlatformDesktopProject</RootNamespace>
-    <AssemblyName>CrossPlatformDesktopProject</AssemblyName>
+    <RootNamespace>SuperMetroidvania5Million</RootNamespace>
+    <AssemblyName>SuperMetroidvania5Million</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -91,9 +91,9 @@
     <Compile Include="Libraries\Command\AudioCommands\ShuffleThemesCommand.cs" />
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
-    <Compile Include="Libraries\Command\GameWinMenuCommand.cs" />
+    <Compile Include="Libraries\Command\EnableCommandCommand.cs" />
     <Compile Include="Libraries\Command\MainMenuCommand.cs" />
-    <Compile Include="Libraries\Command\SettingsMenuCommand.cs" />
+    <Compile Include="Libraries\Command\IDisableableCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
     <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\SetMenuStateCommand.cs" />
     <Compile Include="Libraries\Command\GameStateCommands\MenuStateCommands\MenuDownCommand.cs" />
@@ -132,6 +132,7 @@
     <Compile Include="Libraries\Container\InfoContainer\ProjectileUtilities.cs" />
     <Compile Include="Libraries\Container\InfoContainer\MiscUtilities.cs" />
     <Compile Include="Libraries\Container\InfoContainer\InfoContainer.cs" />
+    <Compile Include="Libraries\Controller\CameraController.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
     <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon1.cs" />
     <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon2.cs" />
@@ -424,7 +425,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Code Reviews\Sprint5\" />
-    <Folder Include="Libraries\CSV\Level Classes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
