--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -170,7 +170,7 @@
     <Compile Include="Libraries\GameStates\States\ItemUpgradeSelectionState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\AbstractMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\GameWinMenuState.cs" />
-	<Compile Include="Libraries\Command\GameStateCommands\GameOverCommand.cs" />
+    <Compile Include="Libraries\Command\GameStateCommands\GameOverCommand.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\StartMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\SettingsMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\InGameMenuState.cs" />
@@ -425,10 +425,10 @@
     <Content Include="Code Reviews\Sprint4\Code Readability\NyigelReadabilityReviewShyamal.txt" />
     <Content Include="Code Reviews\Sprint4\Code Readability\TristanReadabilityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint4\Code Readability\WillReadabilityReviewDanny.txt" />
+    <Content Include="Code Reviews\Sprint5\Code Quality\WillQualityReviewDanny.txt" />
+    <Content Include="Code Reviews\Sprint5\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Code Reviews\Sprint5\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
