I fucked up - undoing the last push

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -388,39 +388,39 @@
     <None Include="BurndownCharts\sprint4_burndown_chart.xlsx" />
     <None Include="BurndownCharts\sprint5_burndown_chart.xlsx" />
     <None Include="Code Reviews\Sprint4\Sprint 4 Reflection.pdf" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon1.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB1.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB10.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB11.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB12.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB13.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB14.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB15.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB16.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB17.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB18.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB19.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB2.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB3.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB4.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB5.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB6.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon2.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon3.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon4.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon5.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon6.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon7.csv" />
-    <None Include="Libraries\Levels\Dungeon A\KraidDungeon8.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB7.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB8.csv" />
-    <None Include="Libraries\Levels\Dungeon B\KraidDungeonB9.csv" />
+    <None Include="Libraries\Levels\KraidDungeon.csv" />
+    <None Include="Libraries\Levels\KraidDungeon1.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB1.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB10.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB11.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB12.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB13.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB14.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB15.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB16.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB17.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB18.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB19.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB2.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB3.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB4.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB5.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB6.csv" />
+    <None Include="Libraries\Levels\KraidDungeon2.csv" />
+    <None Include="Libraries\Levels\KraidDungeon3.csv" />
+    <None Include="Libraries\Levels\KraidDungeon4.csv" />
+    <None Include="Libraries\Levels\KraidDungeon5.csv" />
+    <None Include="Libraries\Levels\KraidDungeon6.csv" />
+    <None Include="Libraries\Levels\KraidDungeon7.csv" />
+    <None Include="Libraries\Levels\KraidDungeon8.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB7.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB8.csv" />
+    <None Include="Libraries\Levels\KraidDungeonB9.csv" />
     <None Include="Libraries\Levels\KraidDungeonSample.csv" />
     <None Include="Libraries\Levels\LevelOne - Copy.csv" />
     <None Include="Libraries\Levels\LevelOne.csv" />
     <None Include="Libraries\Levels\LevelTwo.csv" />
-    <None Include="Libraries\Levels\Endless\EndlessLevel.csv" />
+    <None Include="Libraries\Levels\EndlessLevel.csv" />
     <None Include="Libraries\Levels\StartingLevel.csv" />
     <None Include="Libraries\Levels\TestStartingLevelLong.csv" />
   </ItemGroup>
